# dbeb_rag

./: .gitignore  README.md  agent.py  app.py  dataset.txt  download_and_scrape.py  gemapp.py  package-lock.json  pyproject.toml  remove_braces.py  requirements.txt
Dataset_Extractor/: scraping_dbeb_links.py
backend/: .env.example  server.py  server_old.py
backend/app/: main.py  models.py
backend/app/api/: agent_endpoint.py  endpoints.py
backend/app/core/: config.py
backend/app/services/: agent_router.py  evaluator.py  llm.py  vector_store.py
dbebui/: package-lock.json  package.json
dbebui/app/: globals.css  layout.tsx  page.tsx
dbebui/app/admin/: page.tsx
dbebui/app/admin/evaluate/: page.tsx
dbebui/app/chat/: page.tsx
dbebui/components/: navbar.tsx  theme-toggle.tsx
dbebui/components/ui/: button.tsx
