[project]
name = "drag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-huggingface>=1.2.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "nest-asyncio>=1.6.0",
    "pypdf>=6.4.2",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
